Add deployment configurations and fix build issues

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL=https://your-backend-domain.onrender.com
+REACT_APP_API_URL=https://panorama-backend.onrender.com
 REACT_APP_CONSULTATION_URL=https://your-consultation-app.netlify.app 
