--- a/package.json
+++ b/package.json
@@ -4,25 +4,25 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.4.8",
-    "@mui/material": "^6.4.8",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.10",
+    "@mui/material": "^5.15.10",
     "@types/axios": "^0.9.36",
     "@types/node": "^16.18.126",
-    "@types/react": "^18.3.20",
-    "@types/react-dom": "^18.3.5",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
     "@types/three": "^0.160.0",
-    "axios": "^1.8.4",
+    "axios": "^1.6.7",
     "html-webpack-plugin": "^5.6.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.1",
     "source-map-loader": "^5.0.0",
-    "styled-components": "^6.1.16",
+    "styled-components": "^6.1.8",
     "three": "^0.160.1",
     "typescript": "^4.9.5",
     "webpack-dev-server": "^5.2.0"
