--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "webpack-dev-server": "^5.2.0"
   },
   "scripts": {
-    "start": "set PORT=3001 && react-scripts start",
-    "build": "CI=false react-scripts build",
+    "start": "react-scripts start",
+    "build": "set \"CI=false\" && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
