--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGODB_URI=mongodb+srv://33693:Yk5WqpUiSmcj5NYz@cluster0.yzzt6vi.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://33693:Yk5WqpUiSmcj5NYz@cluster0.yzzt6vi.mongodb.net/panorama?retryWrites=true&w=majority&appName=Cluster0
 CORS_ORIGIN=https://realestate-panorama.netlify.app 
