--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,12 @@
 [build]
   command = "npm run build"
   publish = "build"
-  environment = { NODE_VERSION = "18" }
+  environment = { NODE_VERSION = "18", NPM_FLAGS = "--no-optional" }
+
+[build.environment]
+  NODE_ENV = "production"
+  CI = "false"
+  GENERATE_SOURCEMAP = "false"
 
 [[redirects]]
   from = "/*"
