--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,10 @@
 [build]
   command = "npm run build"
   publish = "build"
-  environment = { NODE_VERSION = "18", NPM_FLAGS = "--no-optional" }
 
 [build.environment]
+  NODE_VERSION = "18"
+  NPM_FLAGS = "--no-optional"
   NODE_ENV = "production"
   CI = "false"
   GENERATE_SOURCEMAP = "false"
