--- a/netlify.toml
+++ b/netlify.toml
@@ -10,6 +10,21 @@
   GENERATE_SOURCEMAP = "false"
 
 [[redirects]]
+  from = "/neighborhoods/*"
+  to = "/index.html"
+  status = 200
+
+[[redirects]]
+  from = "/buildings/*"
+  to = "/index.html"
+  status = 200
+
+[[redirects]]
+  from = "/rooms/*"
+  to = "/index.html"
+  status = 200
+
+[[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
