라우팅 설정 개선: netlify.toml 리다이렉트 설정 단순화 및 index.html에 base 태그 추가

--- a/netlify.toml
+++ b/netlify.toml
@@ -10,16 +10,7 @@
   GENERATE_SOURCEMAP = "false"
 
 [[redirects]]
-  from = "/neighborhoods/*"
-  to = "/index.html"
-  status = 200
-
-[[redirects]]
-  from = "/rooms/*"
-  to = "/index.html"
-  status = 200
-
-[[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+  force = true
